# SecuScan-AppWindows

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/api/: llm.rs
src-tauri/src/engine/: scanner.rs
src-tauri/src/export/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parsers/: binary.rs  config.rs  mod.rs  sast.rs  script.rs
src-tauri/src/security/: keystore.rs
