[package]
name = "secuscan-ai"
version = "1.0.0"
description = "SecuScan AI - Offensive & Defensive Security Scanner"
authors = ["SecuScan"]
edition = "2021"

[lib]
name = "secuscan_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "secuscan-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
rayon       = "1"
walkdir     = "2"
regex       = "1"
once_cell   = "1"
anyhow      = "1"
thiserror   = "1"
log         = "0.4"
env_logger  = "0.11"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
base64      = "0.22"
hex         = "0.4"
sha2        = "0.10"
md5         = "0.7"
goblin      = { version = "0.9", default-features = false, features = ["pe64", "pe32"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
yara-x      = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winbase", "minwindef"] }

[profile.release]
lto           = true
codegen-units = 1
strip         = true
opt-level     = 3

[profile.dev]
opt-level = 0
